update editor fix network battle error with handy + pc updated desktop game to be used by the editor