@@ -3,13 +3,10 @@ package com.broll.pokleditor.debug;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 
-import com.broll.pokleditor.main.PoklEditorMain;
-import com.broll.poklmon.data.DataLoader;
-import com.broll.poklmon.main.PoklmonGameMain;
 import com.broll.poklmon.main.StartInformation;
-import com.broll.poklmon.player.Player;
 
 public class GameDebugger {
 
@@ -21,39 +18,71 @@ public class GameDebugger {
 
 	public static void debugGame(StartInformation info) {
 
-		if (debugPath == null) {
-			PoklmonGameMain game = new PoklmonGameMain();
-			Player.SAVING_ALLOWED = false;
-			DataLoader.SKIP_SOUNDS = true;
-			game.startGame(info);
-			// restore
-			PoklEditorMain.cleanupDebug();
-		} else {
 			System.out.println("Debug in Path: " + debugPath.getAbsolutePath());
-
+			String start = StartInformation.parseToConsole(info);
+			System.out.println("Debug-Command: " + start);
+			
 			try {
-				String start = StartInformation.parseToConsole(info);
-				System.out.println("Debug-Command: " + start);
-				String libPath="-Djava.library.path="+debugPath.getAbsolutePath()+"/natives";
-				Process ps = Runtime.getRuntime().exec(
-						new String[] { "java",libPath,"-jar", debugPath.getAbsolutePath() + "/Poklmon.jar", start });
-				ps.waitFor();
-				try {
-					String line;
-					BufferedReader error = new BufferedReader(new InputStreamReader(ps.getErrorStream()));
-					while ((line = error.readLine()) != null) {
-						System.err.println("=DEBUG-GAME-ERROR=>" + line);
-					}
-				} catch (final IOException e) {
-				}
+				String[] cmds=getGdxCommand(info, start);
+				Process p = new ProcessBuilder().inheritIO().command(cmds).start();
+				p.waitFor();
 			} catch (IOException e) {
-
 				e.printStackTrace();
-			} catch (InterruptedException e) {
-
+			}
+			catch (InterruptedException e) {
 				e.printStackTrace();
 			}
 
+	}
+	
+	private static String[] getGdxCommand(StartInformation info, String startCommands){
+		String path=debugPath.getAbsolutePath()+"\\";
+		String cp="\""+path+"PoklGdxLauncher.jar;"+path+"PoklGdxCore.jar;"+path+"libs/*\"";			
+		String mainclass="com.broll.poklmon.desktop.DesktopLauncher";
+		return new String[] { "java", "-cp",cp,  mainclass, startCommands };
+	}
+	
+	private static String[] getSlickCommand(StartInformation info, String startCommands){
+		String path=debugPath.getAbsolutePath()+"\\";
+		String cp="\""+path+"Poklmon.jar;"+path+"libs/*\"";			
+		String libPath = "-Djava.library.path=" + debugPath.getAbsolutePath() + "/natives";
+		String mainclass="com.broll.poklmon.main.PoklmonGameMain";
+		return new String[] { "java", "-cp",cp, libPath, mainclass, startCommands };
+	}
+
+	/*
+	 * Runtime rt = Runtime.getRuntime(); try { Process proc =
+	 * rt.exec(cmds); StreamGobbler errorGobbler = new
+	 * StreamGobbler(proc.getErrorStream(), "ERROR"); StreamGobbler
+	 * outputGobbler = new StreamGobbler(proc.getInputStream(),
+	 * "OUTPUT");
+	 * 
+	 * errorGobbler.start(); outputGobbler.start();
+	 * 
+	 * proc.waitFor(); } catch (IOException e) { e.printStackTrace(); }
+	 * catch (InterruptedException e) {
+	 * 
+	 * e.printStackTrace(); }
+	 */
+	private static class StreamGobbler extends Thread {
+		InputStream is;
+		String type;
+
+		StreamGobbler(InputStream is, String type) {
+			this.is = is;
+			this.type = type;
+		}
+
+		public void run() {
+			try {
+				InputStreamReader isr = new InputStreamReader(is);
+				BufferedReader br = new BufferedReader(isr);
+				String line = null;
+				while ((line = br.readLine()) != null)
+					System.out.println(type + ">" + line);
+			} catch (IOException ioe) {
+				ioe.printStackTrace();
+			}
 		}
 	}
 
